--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ p {
     /*border: 1px solid #78422a;*/
     /*padding: 5px 0;*/
     width: 326px;
-    margin: 50px 70px;
+    margin: 50px 40px;
     /*margin: 0 auto;*/
     /*margin: 20px 16px;*/
     
@@ -214,6 +214,7 @@ p {
     width: 100%;
     height: 600px;
     background: #f7f3e9;
+    position: relative;
     /*padding-top: 100px;*/
     margin: 0 auto;
     padding-bottom: 60px;
@@ -225,8 +226,13 @@ p {
     box-sizing: border-box;
     padding: 30px;
     float: left;
-    transform: translateY(5%) translateX(5%);
-    /*-webkit- transform: translateY(-50%) translateX(-50%);*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+    /*transform: translateY(5%) translateX(5%);*/
+    
     
 }
 
@@ -241,7 +247,7 @@ p {
 }
 
 .right {
-    transform: translateY(5%) translateX(10%);
+    /*transform: translateY(5%) translateX(10%);*/
    
 }
 
