--- a/pc.css
+++ b/pc.css
@@ -200,7 +200,7 @@ p {
     width: 100%;
     /*height: 100vh;*/
     height: 700px;
-    background: #fff url(images/sp_detail.png) 0 0 no-repeat;
+    background: #fff url(images/pc_detail.png) 0 0 no-repeat;
     background-size: cover;
 
     /*margin-bottom: 32px;*/
@@ -358,7 +358,7 @@ p {
     width: 100%;
     /*height: 100vh;*/
     height: 600px;
-    background: #fff url(images/sp_detail.png) 0 0 no-repeat;
+    background: #fff url(images/pc_map.png) 0 0 no-repeat;
     
     background-size: cover;
 
