--- a/pc.css
+++ b/pc.css
@@ -32,7 +32,7 @@ p {
     width: 100%;
     /*height: 100vh;*/
     height: 100vh;
-    background: #fff url(images/mainvisual1.png) 0 0 no-repeat;
+    background: #fff url(images/mainvisual_pc.png) 0 0 no-repeat;
     background-size: cover;
 
     /*margin-bottom: 32px;*/
@@ -223,7 +223,7 @@ p {
 
 
 .right, .left {
-    width: 90%;
+    width: 50%;
   
     box-sizing: border-box;
     padding: 30px;
@@ -240,26 +240,32 @@ p {
 }
 
 .right-box, .left-box {
-    width: 300px;
-    float: left;
+    width: 250px;
+    /*float: left;*/
    
-    
-}
-
-.right-box{
-    width: 300px;
+    width: 250px;
     /*float: left;*/
    position: absolute;
     top: 50%;
-    left: 60%;
+    left: 335px;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+}
+
+.right-box{
+    width: 250px;
+    /*float: left;*/
+   position: absolute;
+    top: 50%;
+    left: 335px;
     transform: translateY(-50%) translateX(-50%);
     -webkit- transform: translateY(-50%) translateX(-50%);
     
 }
-
+/*
 .left-box{
-    width: 300px;
-    /*float: left;*/
+    width: 250px;
+ 
    position: absolute;
     top: 50%;
     left: 20%;
@@ -267,7 +273,7 @@ p {
     -webkit- transform: translateY(-50%) translateX(-50%);
     
 }
-
+*/
 
 /*
 .right iframe, .left iframe{
@@ -278,7 +284,7 @@ p {
 }
 .left iframe{
     /*float: right;*/
-    left: 60%;
+    /*left: 60%;*/
 }
 
 .right {
@@ -291,8 +297,8 @@ p {
  
 }
 .left-box{
-    margin-right: 10%;
-    padding-left: 10%;
+    margin-left: 10%;
+    /*padding-left: 10%;*/
 }
 
 /*
@@ -325,7 +331,7 @@ p {
 
 h2 {
     font-family: 'ETopFont','JTopFont';
-    font-size: 55px;
+    font-size: 40px;
    
     color: #c73c60;
     /*padding-top: 60px;*/
@@ -341,15 +347,15 @@ span{
 p {
     font-family: "游明朝", "YuMincho", serif;
     font-weight: bold;
-    font-size: 30px;
-    line-height: 40px;
+    font-size: 20px;
+    line-height: 35px;
     color: #78422a;
 }
 
 .detail a{
     font-family: "游明朝", "YuMincho", serif;
     font-weight: bold;
-    font-size: 23px;
+    font-size: 20px;
     line-height: 40px;
     color: #78422a;
 }
