--- a/pc.css
+++ b/pc.css
@@ -233,9 +233,9 @@ p {
     position: absolute;
     position: relative;
     top: 50%;
-    left: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+   
+    padding-left: 20px;
+    
     /*left: 50%;*/
     transform: translateY(-50%) ;
     -webkit- transform: translateY(-50%) ;
@@ -251,7 +251,7 @@ p {
     float: left;
    position: absolute;
     top: 50%;
-    left: 60%;
+    left: 350px;;
     transform: translateY(-50%) translateX(-50%);
     -webkit- transform: translateY(-50%) translateX(-50%);
 }
