--- a/pc.css
+++ b/pc.css
@@ -224,7 +224,7 @@ p {
 }
 
 
-.right, .left {
+.right{
     width: 50%;
   
     box-sizing: border-box;
@@ -242,6 +242,23 @@ p {
     /*transform: translateY(5%) translateX(5%);*/
     
     
+}
+
+.left{
+    width: 50%;
+  
+    box-sizing: border-box;
+    /*padding: 30px;*/
+    float: left;
+    position: absolute;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    padding-left: 20px;
+    
+    /*left: 50%;*/
+    transform: translateY(-50%) ;
+    -webkit- transform: translateY(-50%) ;
 }
 
 .right-box, .left-box {
@@ -281,7 +298,7 @@ p {
  
 }
 .left-box{
-    margin-left: 10%;
+   
     /*padding-left: 10%;*/
 }
 
