--- a/style.css
+++ b/style.css
@@ -227,13 +227,13 @@ p {
     box-sizing: border-box;
     padding: 30px;
     float: left;
-    /*position: absolute;
+    position: absolute;
     position: relative;
     top: 50%;
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
     -webkit- transform: translateY(-50%) translateX(-50%);
-    */
+    
 }
 
 .right-box, .left-box {
