--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ p {
     padding: 30px;
     float: left;
     position: absolute;
-    position: relative;
+    /*position: relative;*/
     top: 50%;
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
