--- a/style.css
+++ b/style.css
@@ -239,8 +239,17 @@ p {
 .right-box, .left-info {
     width: 300px;
     float: left;
-   
+   position: relative;
     
+}
+
+.left-box{
+    position: absolute;
+    /*position: relative;*/
+    top: 50%;
+    
+    transform: translateY(-50%);
+    -webkit- transform: translateY(-50%);
 }
 
 .right iframe, .left iframe{
