--- a/style.css
+++ b/style.css
@@ -259,6 +259,16 @@ p {
     float: left;
 }
 
+.left iframe{
+    float: left;
+    position: absolute;
+    /*position: relative;*/
+    top: 50%;
+    
+    transform: translateY(-50%);
+    -webkit- transform: translateY(-50%);
+}
+
 
 /*
 .right, .left {
