--- a/style.css
+++ b/style.css
@@ -238,22 +238,22 @@ p {
 
 .right-box, .left-info {
     width: 300px;
-    height: 688px;
+    /*height: 688px;*/
     position: relative;
     float: left;
    
     
 }
-
+/*
 .left-box{
     position: absolute;
-    /*position: relative;*/
+   
     top: 50%;
     
     transform: translateY(-50%);
     -webkit- transform: translateY(-50%);
     
-}
+}*/
 
 .right iframe, .left iframe{
     float: left;
