--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ p {
     background: #f7f3e9;
     top: 0px;
     padding-bottom: 200px;
-    /*padding-top: 36px;*/
 
 }
 
@@ -130,6 +129,7 @@ p {
     font-size: 75px;
     color: #c73c60;
     /*margin-bottom: 10px;*/
+    padding-top: 100px;
     text-align: center;
     /*margin-bottom: 56px;*/
 }
@@ -143,7 +143,7 @@ p {
     font-size: 19px;*/
     /*text-align: center;*/
     justify-content: center;
-    padding-top: 150px;
+    padding-top: 100px;
 }
 
 .photo {
@@ -162,16 +162,17 @@ p {
 
 
 .information{
-    width: 170px;
+    width: 230px;
     margin: 0 auto;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 38px;
 }
 
 .shoplink{
     /*width: 210px;*/
     color: #c73c60;
     font-family: 'JTopFont';
+    font-size: 25px;
     text-decoration: none;
     border: 2px solid #c73c60;
     border-radius: 5px;
@@ -352,7 +353,7 @@ p {
 h2 {
     font-family: 'ETopFont','JTopFont';
     font-size: 55px;
-   
+   line-height: 65px;
     color: #c73c60;
     /*padding-top: 60px;*/
     margin-bottom: 30px;
@@ -361,7 +362,8 @@ h2 {
 
 span{
     
-    font-size: 23px;
+    font-size: 27px;
+    line-height: 0px;
 }
 
 p {
